src/objects/CloudAmpGA__CloudAmpGA_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>CloudAmpGA__Bounces__c</fullName>
        <label>Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Campaign_Visits_2__c</fullName>
        <formula>CloudAmpGA__Visits__c - CloudAmpGA__Direct_Visits__c  - CloudAmpGA__Referral_Visits__c  -  CloudAmpGA__Search_Visits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Campaign_Visits__c</fullName>
        <label>Campaign Visits 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Direct_Visits__c</fullName>
        <label>Direct Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goal_10__c</fullName>
        <label>Goal 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goal_11__c</fullName>
        <label>Goal 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goal_12__c</fullName>
        <label>Goal 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goal_Conversions_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal 10 Conversions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goal_Conversions_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal 11 Conversions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goal_Conversions_12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal 12 Conversions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Goals_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goals Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Lookup field that associates Leads to the CloudAmpGA Metrics custom object.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CloudAmpGA Metrics</relationshipLabel>
        <relationshipName>CloudAmpGA_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Metrics_Date__c</fullName>
        <label>Metrics Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__New_Visitors__c</fullName>
        <label>New Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Non_Paid_Search_Visits__c</fullName>
        <label>Non-Paid Search Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__PageViews__c</fullName>
        <label>PageViews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Paid_Search_Visits__c</fullName>
        <label>Paid Search Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Profile_Id__c</fullName>
        <label>Profile_Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Profile_Name__c</fullName>
        <description>The name of the profile this metrics data belongs to. Convenience for dashboards.</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Profile_Number__c</fullName>
        <description>A copy of the profile number from the profile object. This allows for easier reporting.</description>
        <label>Profile Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Referral_Visits__c</fullName>
        <label>Referral Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Returning_Visitors__c</fullName>
        <label>Returning Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Search_Visits__c</fullName>
        <label>Search Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Visit_Bounce_Rate__c</fullName>
        <description>Visitor Bounce Rate - (ga:bounces / ga:visits) * 100</description>
        <formula>IF( CloudAmpGA__Visits__c  &gt; 0, CloudAmpGA__Bounces__c  /  CloudAmpGA__Visits__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Visitors__c</fullName>
        <label>Unique Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudAmpGA__Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DZone_Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manually entered visits that are iframed in dzone and other syndication sites.</description>
        <inlineHelpText>Manually entered visits that are iframed in dzone and other syndication sites.</inlineHelpText>
        <label>DZone Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_To_Date__c</fullName>
        <description>True if metrics date should be included in month to date comparisons</description>
        <formula>DAY(CloudAmpGA__Metrics_Date__c) &lt;= DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if metrics date should be included in month to date comparisons</inlineHelpText>
        <label>Month To Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Adj__c</fullName>
        <description>Adjusted referral visit count that includes dzone traffic</description>
        <formula>FLOOR(DZone_Visits__c / 2) +  CloudAmpGA__Referral_Visits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjusted referral visit count that includes dzone traffic</inlineHelpText>
        <label>Referral Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Visitors_Adj__c</fullName>
        <description>Approximate number of unique visitors with dzone adjustment.</description>
        <formula>CloudAmpGA__Visitors__c + 

IF(CloudAmpGA__Visits__c &gt; 0, 
    FLOOR( DZone_Visits__c / 2 * ( CloudAmpGA__Visitors__c /  CloudAmpGA__Visits__c ) ),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Visitors Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visits_Adj__c</fullName>
        <description>Adjusted visit count that includes dzone</description>
        <formula>CloudAmpGA__Visits__c +  FLOOR( DZone_Visits__c / 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjusted visit count that includes dzone</inlineHelpText>
        <label>Visits Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CloudAmpGA Metrics</label>
    <listViews>
        <fullName>CloudAmpGA__All</fullName>
        <columns>CloudAmpGA__Metrics_Date__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CloudAmpGA__Visits__c</columns>
        <columns>DZone_Visits__c</columns>
        <columns>CloudAmpGA__Direct_Visits__c</columns>
        <columns>CloudAmpGA__Campaign_Visits_2__c</columns>
        <columns>CloudAmpGA__Search_Visits__c</columns>
        <columns>CloudAmpGA__Referral_Visits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CloudAmpGA__Metrics_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_WEEKS:8</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CloudAmpGA__Audience_Overview_Metrics</fullName>
        <columns>NAME</columns>
        <columns>CloudAmpGA__Metrics_Date__c</columns>
        <columns>CloudAmpGA__Profile_Number__c</columns>
        <columns>CloudAmpGA__Profile_Name__c</columns>
        <columns>CloudAmpGA__Visitors__c</columns>
        <columns>CloudAmpGA__Visits__c</columns>
        <columns>CloudAmpGA__PageViews__c</columns>
        <columns>CloudAmpGA__Bounces__c</columns>
        <columns>CloudAmpGA__Visit_Bounce_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Audience Overview Metrics</label>
    </listViews>
    <listViews>
        <fullName>CloudAmpGA__Goals_11_20_Conversion_Metrics</fullName>
        <columns>CloudAmpGA__Metrics_Date__c</columns>
        <columns>NAME</columns>
        <columns>CloudAmpGA__Profile_Name__c</columns>
        <columns>CloudAmpGA__Profile_Number__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_11__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_12__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_13__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_14__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_15__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_16__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_17__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_18__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_19__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_20__c</columns>
        <filterScope>Everything</filterScope>
        <label>Goals 11-20 Conversion Metrics</label>
    </listViews>
    <listViews>
        <fullName>CloudAmpGA__Goals_1_10_Conversion_Metrics</fullName>
        <columns>CloudAmpGA__Metrics_Date__c</columns>
        <columns>NAME</columns>
        <columns>CloudAmpGA__Profile_Name__c</columns>
        <columns>CloudAmpGA__Profile_Number__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_1__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_2__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_3__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_4__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_5__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_6__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_7__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_8__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_9__c</columns>
        <columns>CloudAmpGA__Goal_Conversions_10__c</columns>
        <filterScope>Everything</filterScope>
        <label>Goals 1-10 Conversion Metrics</label>
    </listViews>
    <listViews>
        <fullName>CloudAmpGA__Traffic_Overview_Metrics</fullName>
        <columns>NAME</columns>
        <columns>CloudAmpGA__Metrics_Date__c</columns>
        <columns>CloudAmpGA__Profile_Number__c</columns>
        <columns>CloudAmpGA__Profile_Name__c</columns>
        <columns>CloudAmpGA__New_Visitors__c</columns>
        <columns>CloudAmpGA__Returning_Visitors__c</columns>
        <columns>CloudAmpGA__Campaign_Visits_2__c</columns>
        <columns>CloudAmpGA__Referral_Visits__c</columns>
        <columns>CloudAmpGA__Search_Visits__c</columns>
        <columns>CloudAmpGA__Direct_Visits__c</columns>
        <columns>CloudAmpGA__Non_Paid_Search_Visits__c</columns>
        <columns>CloudAmpGA__Paid_Search_Visits__c</columns>
        <filterScope>Everything</filterScope>
        <label>Traffic Overview Metrics</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Metrics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudAmpGA Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>